syntax = "proto3";

option go_package = "INServer/src/proto/engine";

message Vector2 {
    double X = 1;
    double Z = 2;
}

message Vector3 {
    double X = 1;
    double Y = 2;
    double Z = 3;
}

message Rect {
    double X = 1;
    double Z = 2;
    double Width = 3;
    double Height = 4;
}

message Quaternion {
    double X = 1;
    double Y = 2;
    double Z = 3;
    double W = 4;
}